--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     repositories {
         jcenter()
@@ -15,6 +16,7 @@ version = "1.0.0"
 group = "net.coderbot.projecty" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ProjectY-1.12"
 
+
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
@@ -23,7 +25,7 @@ compileJava {
 minecraft {
     version = "1.12.2-14.23.5.2806"
     runDir = "run"
-    
+
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
@@ -34,11 +36,14 @@ minecraft {
 }
 
 dependencies {
+    implementation 'org.apache.logging.log4j:log4j-api:2.11.1'
+    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.11.1'
+
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
     //compile "some.group:artifact:version"
-      
+
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
@@ -57,7 +62,16 @@ dependencies {
 
 }
 
+task generateResources(type: Exec) {
+    // process generated resources
+    workingDir "$projectDir"
+    commandLine './generateResources.sh'
+}
+
 processResources {
+
+    dependsOn 'generateResources'
+
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
@@ -65,13 +79,14 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
+
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-        
+
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+        exclude 'assets/projecty/textures/baseline'
     }
 }
