--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.java.home=/usr/lib/jvm/java-8-openjdk-amd64/
 org.gradle.jvmargs=-Xmx3G
