--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ run
 
 # generated resources
 src/main/resources/assets/projecty/blockstates
+src/main/resources/assets/projecty/lang
 src/main/resources/assets/projecty/models/block
 src/main/resources/assets/projecty/models/item
 src/main/resources/assets/projecty/textures/blocks
